package com.handmade.ecommerce.catalog.model;

/**
 * CollectionType - Enum
 * Types of collections
 */
public enum CollectionType {
    SEASONAL,      // Holiday Gifts, Summer Collection, etc.
    FEATURED,      // Editor's Picks, Staff Favorites
    CURATED,       // Manually curated by merchandising team
    DYNAMIC,       // Auto-populated based on rules (New Arrivals, Trending)
    PROMOTIONAL,   // Sale items, Clearance
    ARTISAN_SPOTLIGHT  // Featuring specific artisan's work
}
